# midivis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
midivis/: __main__.py  display.py  midivis.tcss  play.py  textual_app.py  wled.py
src/midivis/: __main__.py  analyse.py  display.py  midi_metadata.py  play.py  textual_app.py  utils.py  wled.py
