[tool.poetry]
name = "midivis"
version = "0.1.0"
description = "MIDI Visualiser"
authors = ["Alex Pinkney <3755307+apinkney97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
more-itertools = "^10.2.0"
requests = "^2.31.0"
rich = "^13.7.1"
typer = {extras = ["all"], version = "^0.9.0"}
textual = "^0.53.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
textual-dev = "^1.5.1"
ipython = "^8.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable isort rules.
extend-select = ["I"]

[tool.poetry.scripts]
midivis = 'midivis.__main__:app'

